Added documentation for CreateLayer

--- a/shortcut_composer/manual.html
+++ b/shortcut_composer/manual.html
@@ -115,6 +115,22 @@
         <li>lighten</li>
       </ul>
     </li>
+    <li>
+      <h3 id="create-painting-layer-with-blending-mode">Create painting layer with blending mode</h3>
+      <p>Pie menu for creating a new layer with picked <strong>blending mode</strong>. Consists of most commonly used
+        ones:</p>
+      <ul>
+        <li>normal</li>
+        <li>erase</li>
+        <li>overlay,</li>
+        <li>color,</li>
+        <li>multiply,</li>
+        <li>add,</li>
+        <li>screen,</li>
+        <li>darken,</li>
+        <li>lighten</li>
+      </ul>
+    </li>
   </ul>
   <h3 id="-cursor-trackers-">(<code>Cursor trackers</code>):</h3>
   <p>Cursor tracker is an action for switching values using cursor movement, while the keyboard key is pressed. It
