Fix scaling issues of TextLabelWidgets

--- a/shortcut_composer/manual.html
+++ b/shortcut_composer/manual.html
@@ -40,6 +40,7 @@
     <li>Make sure that presets in PieMenu are displayed only once.</li>
     <li>Allow using &quot;Enclose and fill&quot; tool</li>
     <li>Fix icon of &quot;Colorize Mask&quot; tool</li>
+    <li>Fix scaling issues of Text labels in PieMenu</li>
   </ul>
   <h2 id="requirements">Requirements</h2>
   <p>Shortcut Composer <strong>v1.1.0</strong> Requires krita <strong>5.1.0</strong> or later.</p>
