Update documentation for 1.1.1

--- a/shortcut_composer/manual.html
+++ b/shortcut_composer/manual.html
@@ -24,26 +24,17 @@
     <li><code>Temporary key</code> - temporarily activates a krita property with long press or toggles it on/off with
       short press.</li>
   </ul>
-  <h2 id="what-s-new-in-v1-1-0">What&#39;s new in v1.1.0</h2>
-  <h3 id="added">Added</h3>
-  <ul>
-    <li>Edit mode for PieMenus - click or drag the value icon to enter it. While in edit mode, the values can be dragged
-      across the PieMenu to change their order.</li>
-    <li>Action values tab in Configure Shortcut Composer for adding and removing values in PieMenus and
-      MultipleAssignment
-      actions.</li>
-    <li>PieValues backtrounds are now animated.</li>
-  </ul>
+  <h2 id="what-s-new-in-v1-1-1">What&#39;s new in v1.1.1</h2>
   <h3 id="fixed">Fixed</h3>
   <ul>
-    <li>Allow scrolling through masks while using layey mouse trackers </li>
-    <li>Make sure that presets in PieMenu are displayed only once.</li>
-    <li>Allow using &quot;Enclose and fill&quot; tool</li>
-    <li>Fix icon of &quot;Colorize Mask&quot; tool</li>
-    <li>Fix scaling issues of Text labels in PieMenu</li>
+    <li>Fix a crash when any PieMenu is empty.</li>
+    <li>Support multiple krita windows.</li>
+    <li>Fix transform modes ocasionally stopping to work.</li>
+    <li>Handle invalid configuration.</li>
+    <li>Add missing icon for transform tool.</li>
   </ul>
   <h2 id="requirements">Requirements</h2>
-  <p>Shortcut Composer <strong>v1.1.0</strong> Requires krita <strong>5.1.0</strong> or later.</p>
+  <p>Shortcut Composer <strong>v1.1.1</strong> Requires krita <strong>5.1.0</strong> or later.</p>
   <p>OS support state:</p>
   <ul>
     <li>[x] Windows 10/11</li>
