Fix stay on top issue on Win10

--- a/shortcut_composer/manual.html
+++ b/shortcut_composer/manual.html
@@ -28,7 +28,10 @@
             with
             short press.</li>
     </ul>
-    <h2 id="what-s-new-in-1-2-0-">What&#39;s new in <strong>1.2.0</strong></h2>
+    <h2 id="what-s-new-in-1-2-">What&#39;s new in <strong>1.2</strong></h2>
+    <ul>
+        <li>[hotfix **1.2.1**] - Fixed pie menus in edit mode hiding when clicked outside on the canvas.</li>
+    </ul>
     <h3 id="added">Added</h3>
     <ul>
         <li>Adding and removing PieMenu icons with drag and drop.</li>
