--- a/shortcut_composer/manual.html
+++ b/shortcut_composer/manual.html
@@ -30,6 +30,7 @@
     </ul>
     <h2 id="what-s-new-in-1-2-">What&#39;s new in <strong>1.2</strong></h2>
     <ul>
+        <li>[hotfix **1.2.2**] - Fixed MultipleAssignment actions sharing one configuration window.</li>
         <li>[hotfix **1.2.1**] - Fixed pie menus in edit mode hiding when clicked outside on the canvas.</li>
     </ul>
     <h3 id="added">Added</h3>
@@ -63,7 +64,7 @@
         </li>
         <li>Fix crash when picking a deleted preset with PieMenu.</li>
     </ul>
-    <p>Check out historic <a href="https://github.com/wojtryb/Shortcut-Composer/wiki/Change-log">changelogs</a>.</p>
+    <p>Check out historic <a href="https://github.com/wojtryb/Shortcut-Composer/releases">changelogs</a>.</p>
     <h2 id="requirements">Requirements</h2>
     <ul>
         <li>Version of krita on plugin release: <strong>5.1.5</strong></li>
