--- a/shortcut_composer/manual.html
+++ b/shortcut_composer/manual.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <h1 id="shortcut-composer-v1-3-2-">Shortcut composer <strong>v1.3.2</strong></h1>
+    <h1 id="shortcut-composer-v1-4-0-">Shortcut composer <strong>v1.4.0</strong></h1>
     <hr>
     <p><strong><code>Extension</code></strong> for painting application <strong><code>Krita</code></strong>, which allows to create custom, complex <strong><code>keyboard shortcuts</code></strong>.</p>
     <p>The plugin adds new shortcuts of the following types:</p>
@@ -23,7 +23,7 @@
     <h2 id="requirements">Requirements</h2>
     <ul>
     <li>Version of krita on plugin release: <strong>5.1.5</strong></li>
-    <li>Required version of krita: <strong>5.1.0</strong></li>
+    <li>Required version of krita: <strong>5.1.0</strong> or later</li>
     </ul>
     <p>OS support state:</p>
     <ul>
