Fix typos found with spellchecker

--- a/shortcut_composer/manual.html
+++ b/shortcut_composer/manual.html
@@ -34,7 +34,7 @@
     </ul>
     <blockquote>
     <p><strong>Note</strong>
-    On <strong>Linux</strong> the only oficially supported version of Krita is <strong>.appimage</strong>, which ships with all required dependencies. Running the plugin on Krita installed from Snap or distribution repositories is not recommended as it may not work out of the box and may require extra dependency-related work.</p>
+    On <strong>Linux</strong> the only officially supported version of Krita is <strong>.appimage</strong>, which ships with all required dependencies. Running the plugin on Krita installed from Snap or distribution repositories is not recommended as it may not work out of the box and may require extra dependency-related work.</p>
     </blockquote>
     <h2 id="how-to-install-or-update-the-plugin-">How to install or update the plugin:</h2>
     <p>Installation steps are THE SAME for installing the plugin for the first time and for updating it to the new version:</p>
@@ -50,7 +50,7 @@
     </ol>
     <blockquote>
     <p><strong>Warning</strong>
-    Some keyboard buttons like <strong>Space, R, Y, V, 1, 2, 3, 4, 5, 6</strong> are reserved for Krita&#39;s Canvas Inputs. Assigning those keys to actions (including those from the plugin) may result in conflicts and abnormal behaviour different for each OS. Either avoid those keys, or remove their bindings in <strong>Settings &gt; Configure Krita &gt; Canvas Input Settings</strong>.</p>
+    Some keyboard buttons like <strong>Space, R, Y, V, 1, 2, 3, 4, 5, 6</strong> are reserved for Krita&#39;s Canvas Inputs. Assigning those keys to actions (including those from the plugin) may result in conflicts and abnormal behavior different for each OS. Either avoid those keys, or remove their bindings in <strong>Settings &gt; Configure Krita &gt; Canvas Input Settings</strong>.</p>
     </blockquote>
     <h2 id="for-krita-plugin-programmers">For krita plugin programmers</h2>
     <p>Some parts of plugin code solve general problems, which can apply outside of Shortcut Composer. Those solutions were placed in separate packages that can be copy-pasted into any other plugin and reused there.</p>
