--- a/shortcut_composer/manual.html
+++ b/shortcut_composer/manual.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <h1 id="shortcut-composer-v1-4-2-">Shortcut composer <strong>v1.4.2</strong></h1>
+    <h1 id="shortcut-composer-v1-5-0-">Shortcut composer <strong>v1.5.0</strong></h1>
     <hr>
     <p><strong><code>Extension</code></strong> for painting application <strong><code>Krita</code></strong>, which allows to create custom, complex <strong><code>keyboard shortcuts</code></strong>.</p>
     <p>The plugin adds new shortcuts of the following types:</p>
@@ -19,11 +19,12 @@
     <li><strong><code>Canvas preview</code></strong> - Temporarily changes canvas elements while the key is pressed.</li>
     <li><strong><code>Multiple assignment</code></strong> - repeatedly pressing a key, cycles between multiple values of krita property.</li>
     <li><strong><code>Temporary key</code></strong> - temporarily activates a krita property with long press or toggles it on/off with short press.</li>
+    <li><strong><code>Rotation selector</code></strong> - while key is pressed, displays a widget, which allows to set an angle-based property.</li>
     </ul>
     <h2 id="requirements">Requirements</h2>
     <ul>
-    <li>Version of krita on plugin release: <strong>5.2.0</strong></li>
-    <li>Required version of krita: <strong>5.1.0</strong> or later</li>
+    <li>Version of krita on plugin release: <strong>5.2.2</strong></li>
+    <li>Required version of krita: <strong>5.2.2</strong> or later</li>
     </ul>
     <p>OS support state:</p>
     <ul>
